UI: Ensure we wrap long context in source info

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -492,6 +492,9 @@ legend {
 .long-filename {
     word-wrap : break-word;
 }
+.overflow-wrap {
+    overflow-wrap: anywhere;
+}
 
 input[type="date"].form-control, input[type="time"].form-control,
 input[type="datetime-local"].form-control, input[type="month"].form-control {
